--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar">
     <div class="navbar-container">
-        <div class="logo-countainer">
+        <div class="logo-container">
         <img src="assets/coffee-cup_16590132.png" alt="Logo Kopi Nusantara" />
         <p>Kopi Nusantara</p>
         </div>
@@ -22,12 +22,12 @@
         </ul>
       </div>
       <div class="button">
-      <a href="#" class="btn">Pesan Disini</a>
+      <a href="login.html" class="btn">Login Admin</a>
       </div>
     </div>
   </div>
 
-  <main>
+  <main class="hero-section">
       <div class="beranda">
         <h2>Selamat Datang di Kopi Nusantara </h2>
         <p>Nikmati pengalaman kopi terbaik dengan biji kopi pilihan dari seluruh Nusantara, 
@@ -78,8 +78,11 @@
       <h2>Menu Spesial Kami</h2>
       <p>Pilihan kopi terbaik dari berbagai daerah di Indonesia, diseduh dengan sempurna</p>
     </div>
-    <div class="menu-countainer"></div>
-  </div> </section>
+    <div id="menu-container" class="menu-container loading">
+      <p>🔄 Memuat menu dari database...</p>
+    </div>
+  </div> 
+</section>
 
 <section class="kontak" id="kontak-kami">
   <div class="kontak-content">
@@ -87,7 +90,7 @@
       <h2 class="judul">Kunjungi Kami</h2>
       <p>Kami siap melayani Anda setiap hari</p>
     </div>
-    <div class="kontak-countainer">
+    <div class="kontak-container">
       <div class="kontak-card">
         <div class="kontak-icon"><img src="https://img.icons8.com/arcade/64/map-marker.png" alt="Lokasi"></div>
         <div class="kontak-caption"><p>Lokasi</p><p>Jl. Kopi Nikmat No. 123<br>Bekasi</p></div>
