--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,16 +72,43 @@
   </div>
 </section>
 
-<section class="menu" id="menu-spesial">
-  <div class="menu-content">
-    <div class="text-menu">
-      <h2>Menu Spesial Kami</h2>
-      <p>Pilihan kopi terbaik dari berbagai daerah di Indonesia, diseduh dengan sempurna</p>
-    </div>
-    <div id="menu-container" class="menu-container loading">
-      <p>🔄 Memuat menu dari database...</p>
-    </div>
-  </div> 
+<!-- Section Coffee -->
+<section class="menu" id="menu-coffee">
+    <div class="menu-content">
+        <div class="text-menu">
+            <h2>☕ Coffee Specialties</h2>
+            <p>Kopi pilihan dari berbagai daerah di Indonesia</p>
+        </div>
+        <div id="coffee-container" class="menu-container loading">
+            <p>🔄 Memuat menu coffee...</p>
+        </div>
+    </div> 
+</section>
+
+<!-- Section Non-Coffee -->
+<section class="menu" id="menu-non-coffee">
+    <div class="menu-content">
+        <div class="text-menu">
+            <h2>🥤 Non-Coffee Drinks</h2>
+            <p>Minuman menyegarkan selain kopi</p>
+        </div>
+        <div id="noncoffee-container" class="menu-container loading">
+            <p>🔄 Memuat menu non-coffee...</p>
+        </div>
+    </div> 
+</section>
+
+<!-- Section Makanan -->
+<section class="menu" id="menu-makanan">
+    <div class="menu-content">
+        <div class="text-menu">
+            <h2>🍽️ Food & Snacks</h2>
+            <p>Makanan ringan dan pastry untuk teman minum Anda</p>
+        </div>
+        <div id="food-container" class="menu-container loading">
+            <p>🔄 Memuat menu makanan...</p>
+        </div>
+    </div> 
 </section>
 
 <section class="kontak" id="kontak-kami">
